--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="text-5xl mb-4">🔥</div>
         <h3 class="font-semibold text-lg mb-2">Tips Pencegahan</h3>
         <p class="text-gray-600 mb-5 text-base">Infografis praktis untuk mengurangi risiko kebakaran di rumah maupun tempat kerja.</p>
-        <a href="tips.html" class="block">
+        <a href="asset/tips.pdf" class="block">
           <button class="w-full bg-yellow-600 text-white font-bold py-3 px-4 rounded-lg shadow hover:bg-green-700 transition">
             📊 Lihat Tips
           </button>
@@ -111,3 +111,4 @@
 
 </body>
 </html>
+
