--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Informasi Damkar Barito Utara</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-br from-gray-100 via-white to-gray-200 font-sans leading-relaxed min-h-screen flex flex-col">
-
+<body class="font-sans leading-relaxed min-h-screen flex flex-col"
+      style="background: linear-gradient(to bottom right, rgba(255,255,255,0.6), rgba(200,200,200,0.6)), url('asset/bg.png'); background-size: cover; background-position: center;">
   <!-- Header -->
   <header class="bg-red-700 text-white py-6 shadow">
     <div class="container mx-auto flex flex-col md:flex-row items-center justify-center gap-4 px-4">
@@ -35,7 +35,7 @@
         <div class="text-5xl mb-4">📑</div>
         <h3 class="font-semibold text-lg mb-2">SOP Layanan</h3>
         <p class="text-gray-600 mb-5 text-base">Panduan prosedur layanan Damkar agar lebih mudah dipahami masyarakat.</p>
-        <a href="asset/sop.pdf" target="_blank" class="w-full">
+        <a href="asset/sop.png" target="_blank" class="w-full">
           <button class="w-full bg-green-600 text-white font-bold py-3 px-4 rounded-lg shadow hover:bg-blue-700 transition">
             📖 Lihat SOP
           </button>
@@ -111,4 +111,5 @@
 
 </body>
 </html>
+
 
