--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="font-sans leading-relaxed min-h-screen flex flex-col"
-      style="background: linear-gradient(to bottom right, rgba(255,255,255,0.6), rgba(200,200,200,0.6)), url('asset/bg.jpg'); background-size: cover; background-position: center;">
+      style="background: linear-gradient(to bottom right, rgba(255,255,255,0.6), rgba(200,200,200,0.6)), url('asset/bg.jpg'); background-size: cover; background-position: center; background-attachment: fixed;"
   <!-- Header -->
   <header class="bg-red-700 text-white py-6 shadow">
     <div class="container mx-auto flex flex-col md:flex-row items-center justify-center gap-4 px-4">
@@ -111,6 +111,7 @@
 
 </body>
 </html>
+
 
 
 
