--- a/index.html
+++ b/index.html
@@ -4,225 +4,122 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Damkar Barito Utara — Informasi & Layanan</title>
-  <meta name="description" content="Informasi layanan Dinas Pemadam Kebakaran & Penyelamatan Kabupaten Barito Utara — SOP, nomor darurat, tips pencegahan, dan tutorial singkat." />
+  <meta name="description" content="Informasi layanan Dinas Pemadam Kebakaran & Penyelamatan Kabupaten Barito Utara — Nomor darurat, SOP layanan, tips pencegahan, tutorial, dan wawancara." />
 
-  <!-- Tailwind CDN (good for quick prototype) -->
+  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* Small visual tweaks beyond default Tailwind */
-    .glass {
-      background: rgba(255,255,255,0.8);
-      backdrop-filter: blur(6px);
-    }
+    .glass { background: rgba(255,255,255,0.8); backdrop-filter: blur(6px); }
+    .slider { display: flex; overflow-x: auto; scroll-snap-type: x mandatory; -webkit-overflow-scrolling: touch; }
+    .slider::-webkit-scrollbar { display: none; }
+    .slide { flex: 0 0 80%; scroll-snap-align: center; margin-right: 1rem; }
   </style>
 </head>
 <body class="font-sans text-slate-800 antialiased bg-gray-50">
 
-  <!-- NAV / HEADER -->
+  <!-- HEADER -->
   <header class="bg-white/60 glass shadow-sm sticky top-0 z-40">
-    <div class="max-w-5xl mx-auto px-4 py-3 flex items-center justify-between gap-4">
+    <div class="max-w-5xl mx-auto px-4 py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
-        <img src="asset/Logo.png" alt="Logo Damkar Barito Utara" class="h-10 w-10 object-contain rounded-md" />
+        <img src="asset/Logo.png" alt="Logo Damkar" class="h-10 w-10 object-contain rounded-md" />
         <div>
-          <h1 class="text-lg font-semibold">Dinas Pemadam Kebakaran & Penyelamatan</h1>
+          <h1 class="text-lg font-semibold">Dinas Pemadam Kebakaran</h1>
           <p class="text-xs text-slate-500">Kabupaten Barito Utara</p>
         </div>
       </div>
-
-      <nav class="hidden sm:flex items-center gap-3">
-        <a href="#layanan" class="text-sm hover:underline">Layanan</a>
-        <a href="#tutorial" class="text-sm hover:underline">Tutorial</a>
-        <a href="#download" class="text-sm hover:underline">Download</a>
-        <a href="https://wa.me/62811521113" target="_blank" rel="noopener" class="ml-3 inline-flex items-center gap-2 bg-red-600 text-white px-3 py-2 rounded-lg text-sm shadow-sm hover:bg-red-700">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M22 16.92V19a2 2 0 01-2.18 2A19.88 19.88 0 013 5.18 2 2 0 015 3h2.09a2 2 0 012 1.72c.12 1.05.37 2.07.74 3.03a2 2 0 01-.45 2.11L8.09 11a16 16 0 006.91 6.91l1.14-1.14a2 2 0 012.11-.45c.96.37 1.98.62 3.03.74a2 2 0 011.72 2z"/></svg>
-          Hubungi
-        </a>
-      </nav>
-
-      <!-- Mobile menu button -->
-      <div class="sm:hidden">
-        <button id="btn-menu" class="p-2 rounded-md focus:outline-none focus:ring-2 focus:ring-red-300" aria-label="Buka menu">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M4 6h16M4 12h16M4 18h16"/></svg>
-        </button>
-      </div>
-    </div>
-
-    <!-- Mobile menu panel -->
-    <div id="panel-menu" class="sm:hidden hidden px-4 pb-4">
-      <div class="flex flex-col gap-2">
-        <a href="#layanan" class="py-2">Layanan</a>
-        <a href="#tutorial" class="py-2">Tutorial</a>
-        <a href="#download" class="py-2">Download</a>
-        <a href="https://wa.me/62811521113" target="_blank" rel="noopener" class="py-2 text-red-600 font-semibold">Hubungi Damkar</a>
-      </div>
+      <a href="https://wa.me/62811521113" target="_blank" rel="noopener" class="inline-flex items-center gap-2 bg-red-600 text-white px-4 py-2 rounded-lg text-sm font-medium shadow hover:bg-red-700">
+        🚨 Hubungi Darurat
+      </a>
     </div>
   </header>
 
-  <!-- HERO -->
-  <main class="flex-1">
-    <section class="bg-gradient-to-br from-red-600 to-rose-500 text-white py-14">
-      <div class="max-w-4xl mx-auto px-4 text-center">
-        <h2 class="text-2xl md:text-3xl font-extrabold leading-tight">Informasi & Layanan Damkar Barito Utara</h2>
-        <p class="mt-3 text-sm md:text-base text-white/90 max-w-2xl mx-auto">Akses cepat ke SOP, nomor darurat, panduan pencegahan, dan tutorial penanganan kebakaran dini — dirancang sederhana untuk semua kalangan.</p>
-
-        <div class="mt-6 flex flex-col sm:flex-row items-center justify-center gap-3">
-          <a href="#layanan" class="inline-flex items-center gap-2 bg-white text-red-600 px-5 py-3 rounded-lg font-semibold shadow-sm hover:opacity-95">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M12 4v16m8-8H4"/></svg>
-            Akses Layanan
-          </a>
-          <a href="#tutorial" class="inline-flex items-center gap-2 bg-white/20 text-white px-5 py-3 rounded-lg font-medium hover:bg-white/10">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M14 5l7 7-7 7V5zM5 5h7v14H5z"/></svg>
-            Lihat Tutorial
+  <main>
+    <!-- HERO: Nomor Darurat -->
+    <section class="bg-gradient-to-br from-red-600 to-rose-500 text-white py-16">
+      <div class="max-w-3xl mx-auto px-4 text-center">
+        <h2 class="text-3xl md:text-4xl font-extrabold">Nomor Darurat Damkar</h2>
+        <p class="mt-3 text-base md:text-lg text-white/90">Segera hubungi kami bila terjadi kebakaran atau keadaan darurat lainnya.</p>
+        <div class="mt-6">
+          <a href="https://wa.me/62811521113" target="_blank" class="inline-flex items-center gap-3 bg-white text-red-600 font-semibold px-6 py-4 rounded-xl text-lg shadow hover:opacity-95">
+            📞 0811-521-113
           </a>
         </div>
+      </div>
+    </section>
 
-        <div class="mt-8">
-          <!-- small visual: QR sample -->
-          <div class="inline-grid place-items-center bg-white/10 px-4 py-3 rounded-lg">
-            <img src="asset/qr_sample.png" alt="QR Code - Akses Layanan" class="h-28 w-28 object-contain rounded-md shadow-sm" />
-            <p class="text-xs mt-2 text-white/80">Scan QR untuk akses cepat</p>
-          </div>
+    <!-- SOP Layanan -->
+    <section id="sop" class="max-w-5xl mx-auto px-4 py-12">
+      <h3 class="text-xl font-semibold mb-4">SOP Layanan</h3>
+      <p class="text-sm text-slate-600 mb-6">Panduan prosedur layanan Damkar yang mudah dipahami.</p>
+      <img src="asset/sop.png" alt="SOP Layanan" class="rounded-xl shadow-md w-full" />
+    </section>
+
+    <!-- Tips Pencegahan -->
+<section id="tips" class="bg-white/70 glass py-12">
+  <div class="max-w-5xl mx-auto px-4">
+    <h3 class="text-xl font-semibold mb-4">Infografis Ringkas Tentang Kebakaran Sehari-hari</h3>
+    <div class="slider">
+      <div class="slide bg-white rounded-xl shadow p-4">
+        <img src="asset/tips1.png" alt="Tips 1" class="rounded-lg w-full" />
+      </div>
+      <div class="slide bg-white rounded-xl shadow p-4">
+        <img src="asset/tips2.png" alt="Tips 2" class="rounded-lg w-full" />
+      </div>
+      <div class="slide bg-white rounded-xl shadow p-4">
+        <img src="asset/tips3.png" alt="Tips 3" class="rounded-lg w-full" />
+      </div>
+      <div class="slide bg-white rounded-xl shadow p-4">
+        <img src="asset/tips4.png" alt="Tips 4" class="rounded-lg w-full" />
+      </div>
+      <div class="slide bg-white rounded-xl shadow p-4">
+        <img src="asset/tips5.png" alt="Tips 5" class="rounded-lg w-full" />
+      </div>
+      <div class="slide bg-white rounded-xl shadow p-4">
+        <img src="asset/tips6.png" alt="Tips 6" class="rounded-lg w-full" />
+      </div>
+      <div class="slide bg-white rounded-xl shadow p-4">
+        <img src="asset/tips7.png" alt="Tips 7" class="rounded-lg w-full" />
+      </div>
+      <div class="slide bg-white rounded-xl shadow p-4">
+        <img src="asset/tips8.png" alt="Tips 8" class="rounded-lg w-full" />
+      </div>
+    </div>
+  </div>
+</section>
+
+
+    <!-- Tutorial -->
+    <section id="tutorial" class="max-w-5xl mx-auto px-4 py-12">
+      <h3 class="text-xl font-semibold mb-4">Tutorial Singkat</h3>
+      <p class="text-sm text-slate-600 mb-6">Video mudah diikuti untuk tindakan awal saat api kecil.</p>
+      <div class="grid md:grid-cols-2 gap-6">
+        <div class="rounded-xl overflow-hidden shadow">
+          <iframe class="w-full h-56" src="https://www.youtube.com/embed/F4DqTCSycKM" title="Tutorial APAR" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="rounded-xl overflow-hidden shadow">
+          <iframe class="w-full h-56" src="https://www.youtube.com/embed/FHMu0wbv7IE" title="Tutorial Handuk Basah" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </section>
 
-    <!-- Layanan / Cards -->
-    <section id="layanan" class="max-w-5xl mx-auto px-4 py-12">
-      <h3 class="text-xl font-semibold text-slate-800 mb-4">Layanan Utama</h3>
-      <p class="text-sm text-slate-600 mb-6">Ringkas | Mudah | Cepat — pilih layanan yang Anda butuhkan.</p>
-
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <!-- SOP Card -->
-        <article class="bg-white rounded-2xl p-5 shadow-sm hover:shadow-md transition" aria-labelledby="sop-title">
-          <div class="flex items-start gap-4">
-            <div class="p-3 rounded-lg bg-green-50">
-              <!-- document icon -->
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M7 7h6v6H7z"/><path d="M14 3H6a2 2 0 00-2 2v14a2 2 0 002 2h12a2 2 0 002-2V9z"/></svg>
-            </div>
-            <div class="flex-1">
-              <h4 id="sop-title" class="font-semibold">SOP Layanan</h4>
-              <p class="text-sm text-slate-600 mt-1">Panduan prosedur layanan Damkar yang mudah dibaca dan dipraktikkan.</p>
-
-              <div class="mt-4 flex items-center gap-3">
-                <a href="asset/sop.png" target="_blank" class="inline-flex items-center gap-2 px-3 py-2 rounded-lg bg-green-600 text-white text-sm font-medium hover:bg-green-700">
-                  <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M12 2v20"/></svg>
-                  Lihat SOP
-                </a>
-                <button class="text-sm text-slate-500 hover:underline" onclick="downloadAsset('asset/sop.png')">Unduh</button>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <!-- Nomor Darurat -->
-        <article class="bg-white rounded-2xl p-5 shadow-sm hover:shadow-md transition" aria-labelledby="call-title">
-          <div class="flex items-start gap-4">
-            <div class="p-3 rounded-lg bg-red-50">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-red-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M22 16.92V19a2 2 0 01-2.18 2A19.88 19.88 0 013 5.18 2 2 0 015 3h2.09a2 2 0 012 1.72c.12 1.05.37 2.07.74 3.03a2 2 0 01-.45 2.11L8.09 11a16 16 0 006.91 6.91l1.14-1.14a2 2 0 012.11-.45c.96.37 1.98.62 3.03.74a2 2 0 011.72 2z"/></svg>
-            </div>
-            <div class="flex-1">
-              <h4 id="call-title" class="font-semibold">Nomor Darurat</h4>
-              <p class="text-sm text-slate-600 mt-1">Tersedia layanan telepon/WhatsApp untuk laporan cepat kebakaran dan evakuasi.</p>
-
-              <div class="mt-4 flex items-center gap-3">
-                <a href="https://wa.me/62811521113" target="_blank" rel="noopener" class="inline-flex items-center gap-2 px-3 py-2 rounded-lg bg-red-600 text-white text-sm font-medium hover:bg-red-700">
-                  <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M21 15a2 2 0 01-2 2h-1l-2 3-3-2-6 2v-6L3 8 4 4h4l5 4 5 1 2 6z"/></svg>
-                  Hubungi Sekarang
-                </a>
-                <button class="text-sm text-slate-500 hover:underline" onclick="copyNumber('0811521113')">Salin Nomor</button>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <!-- Tips Pencegahan -->
-        <article class="bg-white rounded-2xl p-5 shadow-sm hover:shadow-md transition" aria-labelledby="tips-title">
-          <div class="flex items-start gap-4">
-            <div class="p-3 rounded-lg bg-yellow-50">
-              <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-yellow-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M12 2a8 8 0 018 8c0 5-8 12-8 12S4 15 4 10a8 8 0 018-8z"/></svg>
-            </div>
-            <div class="flex-1">
-              <h4 id="tips-title" class="font-semibold">Tips Pencegahan</h4>
-              <p class="text-sm text-slate-600 mt-1">Infografis ringkas tentang pencegahan kebakaran di rumah dan tempat kerja.</p>
-
-              <div class="mt-4 flex items-center gap-3">
-                <a href="asset/tips.pdf" target="_blank" class="inline-flex items-center gap-2 px-3 py-2 rounded-lg bg-yellow-600 text-white text-sm font-medium hover:bg-yellow-700">
-                  <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M12 2v20"/></svg>
-                  Lihat Tips
-                </a>
-                <button class="text-sm text-slate-500 hover:underline" onclick="downloadAsset('asset/tips.pdf')">Unduh</button>
-              </div>
-            </div>
-          </div>
-        </article>
-
-      </div>
-    </section>
-
-    <!-- Tutorial Section -->
-    <section id="tutorial" class="bg-white/60 glass py-10">
-      <div class="max-w-5xl mx-auto px-4">
-        <h3 class="text-xl font-semibold mb-3">Tutorial Singkat</h3>
-        <p class="text-sm text-slate-600 mb-6">Video singkat yang mudah diikuti untuk tindakan awal saat api kecil.</p>
-
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-          <div class="rounded-xl overflow-hidden shadow-sm">
-            <iframe class="w-full h-56" src="https://www.youtube.com/embed/F4DqTCSycKM" title="Tutorial APAR" frameborder="0" loading="lazy" allowfullscreen></iframe>
-          </div>
-
-          <div class="rounded-xl overflow-hidden shadow-sm">
-            <iframe class="w-full h-56" src="https://www.youtube.com/embed/FHMu0wbv7IE" title="Tutorial Handuk Basah" frameborder="0" loading="lazy" allowfullscreen></iframe>
-          </div>
+    <!-- Wawancara -->
+    <section id="wawancara" class="bg-white/60 glass py-12">
+      <div class="max-w-5xl mx-auto px-4 text-center">
+        <h3 class="text-xl font-semibold mb-4">Wawancara Pimpinan</h3>
+        <p class="text-sm text-slate-600 mb-6">Pengalaman dan pesan penting dari pimpinan Damkar Barito Utara.</p>
+        <div class="rounded-xl overflow-hidden shadow max-w-2xl mx-auto">
+          <iframe class="w-full h-64" src="https://www.youtube.com/embed/VIDEO_ID" title="Wawancara Pimpinan" frameborder="0" allowfullscreen></iframe>
         </div>
-
-      </div>
-    </section>
-
-    <!-- Download / Resources -->
-    <section id="download" class="max-w-5xl mx-auto px-4 py-10">
-      <h3 class="text-lg font-semibold mb-3">Unduh & Cetak</h3>
-      <p class="text-sm text-slate-600 mb-4">Sumber daya yang bisa diunduh untuk dipajang atau dibagikan.</p>
-
-      <div class="flex flex-col sm:flex-row gap-3">
-        <a href="asset/sop.png" class="inline-block px-4 py-2 rounded-lg border border-slate-200 bg-white shadow-sm text-sm">SOP (PNG)</a>
-        <a href="asset/tips.pdf" class="inline-block px-4 py-2 rounded-lg border border-slate-200 bg-white shadow-sm text-sm">Tips Pencegahan (PDF)</a>
-        <a href="asset/qr_big.png" class="inline-block px-4 py-2 rounded-lg border border-slate-200 bg-white shadow-sm text-sm">QR Code (PNG)</a>
       </div>
     </section>
   </main>
 
   <!-- FOOTER -->
   <footer class="mt-12 border-t border-slate-200 bg-white">
-    <div class="max-w-5xl mx-auto px-4 py-6 flex flex-col sm:flex-row items-center justify-between gap-4">
+    <div class="max-w-5xl mx-auto px-4 py-6 flex flex-col sm:flex-row items-center justify-between">
       <p class="text-sm text-slate-600">&copy; 2025 Dinas Pemadam Kebakaran & Penyelamatan Kab. Barito Utara</p>
-      <p class="text-xs text-slate-500">Kontak: <span class="font-medium">0811-521-113</span> • Email: <span class="font-medium">damkar@baritoutara.go.id</span></p>
+      <p class="text-sm text-red-600 font-semibold">☎️ 0811-521-113</p>
     </div>
   </footer>
-
-  <script>
-    // Mobile menu toggle
-    const btn = document.getElementById('btn-menu');
-    const panel = document.getElementById('panel-menu');
-    btn?.addEventListener('click', () => panel.classList.toggle('hidden'));
-
-    // Utility: copy number
-    function copyNumber(num){
-      if(!navigator.clipboard) return alert('Salin otomatis tidak didukung di peramban ini.');
-      navigator.clipboard.writeText(num).then(()=>{
-        alert('Nomor disalin: ' + num);
-      });
-    }
-
-    // Utility: force-download (simple)
-    function downloadAsset(href){
-      const a = document.createElement('a');
-      a.href = href;
-      a.download = href.split('/').pop();
-      document.body.appendChild(a);
-      a.click();
-      a.remove();
-    }
-  </script>
-
 </body>
 </html>
