--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <a href="https://wa.me/62811521113" target="_blank" rel="noopener" class="inline-flex items-center gap-2 bg-red-600 text-white px-4 py-2 rounded-lg text-sm font-medium shadow hover:bg-red-700">
-        🚨 Hubungi Darurat
+        🚨 Nomor Emergency
       </a>
     </div>
   </header>
@@ -37,11 +37,11 @@
     <!-- HERO: Nomor Darurat -->
     <section class="bg-gradient-to-br from-red-600 to-rose-500 text-white py-16">
       <div class="max-w-3xl mx-auto px-4 text-center">
-        <h2 class="text-3xl md:text-4xl font-extrabold">Nomor Darurat Damkar</h2>
+        <h2 class="text-3xl md:text-4xl font-extrabold">Informasi dan Layanan Damkar</h2>
         <p class="mt-3 text-base md:text-lg text-white/90">Segera hubungi kami bila terjadi kebakaran atau keadaan darurat lainnya.</p>
         <div class="mt-6">
           <a href="https://wa.me/62811521113" target="_blank" class="inline-flex items-center gap-3 bg-white text-red-600 font-semibold px-6 py-4 rounded-xl text-lg shadow hover:opacity-95">
-            📞 0811-521-113
+            📞 Call
           </a>
         </div>
       </div>
@@ -49,15 +49,15 @@
 
     <!-- SOP Layanan -->
     <section id="sop" class="max-w-5xl mx-auto px-4 py-12">
-      <h3 class="text-xl font-semibold mb-4">SOP Layanan</h3>
-      <p class="text-sm text-slate-600 mb-6">Panduan prosedur layanan Damkar yang mudah dipahami.</p>
+      <h3 class="text-xl font-semibold mb-4">Alur Laporan</h3>
+      <p class="text-sm text-slate-600 mb-6">Panduan alur pelaporan dari masyarakat ke Damkar.</p>
       <img src="asset/sop.png" alt="SOP Layanan" class="rounded-xl shadow-md w-full" />
     </section>
 
     <!-- Tips Pencegahan -->
 <section id="tips" class="bg-white/70 glass py-12">
   <div class="max-w-5xl mx-auto px-4">
-    <h3 class="text-xl font-semibold mb-4">Infografis Ringkas Tentang Kebakaran Sehari-hari</h3>
+    <h3 class="text-xl font-semibold mb-4">Infografis Ringkas Tentang Tips Pencegahan Kebakaran</h3>
     <div class="slider">
       <div class="slide bg-white rounded-xl shadow p-4">
         <img src="asset/tips1.png" alt="Tips 1" class="rounded-lg w-full" />
@@ -90,7 +90,7 @@
 
     <!-- Tutorial -->
     <section id="tutorial" class="max-w-5xl mx-auto px-4 py-12">
-      <h3 class="text-xl font-semibold mb-4">Tutorial Singkat</h3>
+      <h3 class="text-xl font-semibold mb-4">Tutorial Pemadaman</h3>
       <p class="text-sm text-slate-600 mb-6">Video mudah diikuti untuk tindakan awal saat api kecil.</p>
       <div class="grid md:grid-cols-2 gap-6">
         <div class="rounded-xl overflow-hidden shadow">
@@ -123,3 +123,4 @@
   </footer>
 </body>
 </html>
+
