--- a/index.html
+++ b/index.html
@@ -33,19 +33,30 @@
     </div>
   </header>
 
-  <main>
-    <!-- HERO: Nomor Darurat -->
-    <section class="bg-gradient-to-br from-red-600 to-rose-500 text-white py-16">
-      <div class="max-w-3xl mx-auto px-4 text-center">
-        <h2 class="text-3xl md:text-4xl font-extrabold">Informasi dan Layanan Damkar</h2>
-        <p class="mt-3 text-base md:text-lg text-white/90">Segera hubungi kami bila terjadi kebakaran atau keadaan darurat lainnya.</p>
-        <div class="mt-6">
-          <a href="https://wa.me/62811521113" target="_blank" class="inline-flex items-center gap-3 bg-white text-red-600 font-semibold px-6 py-4 rounded-xl text-lg shadow hover:opacity-95">
-            📞 Call
-          </a>
-        </div>
+<main>
+  <!-- HERO: Nomor Darurat -->
+  <section class="relative text-white py-16">
+    <!-- Background image -->
+    <div class="absolute inset-0">
+      <img src="asset/bg.jpg" alt="Background" class="w-full h-full object-cover">
+      <div class="absolute inset-0 bg-black/40"></div> <!-- overlay gelap -->
+    </div>
+
+    <!-- Konten -->
+    <div class="relative max-w-3xl mx-auto px-4 text-center">
+      <h2 class="text-3xl md:text-4xl font-extrabold">Nomor Darurat Damkar</h2>
+      <p class="mt-3 text-base md:text-lg text-white/90">
+        Segera hubungi kami bila terjadi kebakaran atau keadaan darurat lainnya.
+      </p>
+      <div class="mt-6">
+        <a href="https://wa.me/62811521113" target="_blank" 
+           class="inline-flex items-center gap-3 bg-white text-red-600 font-semibold px-6 py-4 rounded-xl text-lg shadow hover:opacity-95">
+          📞 0811-521-113
+        </a>
       </div>
-    </section>
+    </div>
+  </section>
+</main>
 
     <!-- SOP Layanan -->
     <section id="sop" class="max-w-5xl mx-auto px-4 py-12">
@@ -123,4 +134,5 @@
   </footer>
 </body>
 </html>
+
 
