--- a/index.html
+++ b/index.html
@@ -27,10 +27,6 @@
           <p class="text-xs text-slate-500">Kabupaten Barito Utara</p>
         </div>
       </div>
-      <a href="https://wa.me/62811521113" target="_blank" rel="noopener" class="inline-flex items-center gap-2 bg-red-600 text-white px-4 py-2 rounded-lg text-sm font-medium shadow hover:bg-red-700">
-        🚨 Nomor Emergency
-      </a>
-    </div>
   </header>
 
 <main>
@@ -51,7 +47,7 @@
       <div class="mt-6">
         <a href="https://wa.me/62811521113" target="_blank" 
            class="inline-flex items-center gap-3 bg-white text-red-600 font-semibold px-6 py-4 rounded-xl text-lg shadow hover:opacity-95">
-          📞 0811-521-113
+          📞 Call
         </a>
       </div>
     </div>
@@ -134,5 +130,6 @@
   </footer>
 </body>
 </html>
+
 
 
