--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Tips Pencegahan -->
 <section id="tips" class="bg-white/70 glass py-12">
   <div class="max-w-5xl mx-auto px-4">
-    <h3 class="text-xl font-semibold mb-4">Infografis Ringkas Tentang Tips Pencegahan Kebakaran</h3>
+    <h3 class="text-xl font-semibold mb-4">Tips Pencegahan Kebakaran</h3>
     <div class="slider">
       <div class="slide bg-white rounded-xl shadow p-4">
         <img src="asset/tips1.png" alt="Tips 1" class="rounded-lg w-full" />
@@ -98,7 +98,7 @@
     <!-- Tutorial -->
     <section id="tutorial" class="max-w-5xl mx-auto px-4 py-12">
       <h3 class="text-xl font-semibold mb-4">Tutorial Pemadaman</h3>
-      <p class="text-sm text-slate-600 mb-6">Video mudah diikuti untuk tindakan awal saat api kecil.</p>
+      <p class="text-sm text-slate-600 mb-6">Video yang mudah diikuti untuk tindakan awal saat api kecil.</p>
       <div class="grid md:grid-cols-2 gap-6">
         <div class="rounded-xl overflow-hidden shadow">
           <iframe class="w-full h-56" src="https://www.youtube.com/embed/F4DqTCSycKM" title="Tutorial APAR" frameborder="0" allowfullscreen></iframe>
@@ -130,6 +130,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
