--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- Konten -->
     <div class="relative max-w-3xl mx-auto px-4 text-center">
-      <h2 class="text-3xl md:text-4xl font-extrabold">Nomor Darurat Damkar</h2>
+      <h2 class="text-3xl md:text-4xl font-extrabold">INFORMASI LAYANAN DAMKAR</h2>
       <p class="mt-3 text-base md:text-lg text-white/90">
         Segera hubungi kami bila terjadi kebakaran atau keadaan darurat lainnya.
       </p>
