--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <div class="flex items-center gap-3">
         <img src="asset/Logo.png" alt="Logo Damkar" class="h-10 w-10 object-contain rounded-md" />
         <div>
-          <h1 class="text-lg font-bold text-red-700">Damkar Barito Utara</h1>
-          <p class="text-xs text-slate-500">Dinas Pemadam Kebakaran</p>
+          <h1 class="text-lg font-bold text-red-700">Dinas Pemadam Kebakaran dan Penyelamatan</h1>
+          <p class="text-xs text-slate-500">Kabupaten Barito Utara</p>
         </div>
       </div>
 
@@ -175,11 +175,13 @@
   </footer>
 
   <!-- Floating Emergency Button -->
-  <a href="https://wa.me/62811521113" target="_blank" 
-    class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white shadow-lg rounded-full p-4 flex items-center justify-center animate-bounce z-50"
-    title="WhatsApp Darurat">
-    <img src="asset/icon/whatsapp.svg" alt="WhatsApp" class="w-6 h-6">
-  </a>
+<a href="https://wa.me/62811521113" target="_blank" 
+  class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white shadow-lg rounded-full p-4 flex items-center justify-center animate-bounce z-50"
+  title="WhatsApp Darurat">
+  <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/whatsapp.svg" 
+       alt="WhatsApp" class="w-6 h-6 invert">
+</a>
+
 
   <!-- Script slider -->
   <script>
@@ -214,3 +216,4 @@
   </script>
 </body>
 </html>
+
