--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="flex items-center gap-3">
         <img src="asset/Logo.png" alt="Logo Damkar" class="h-10 w-10 object-contain rounded-md" />
         <div>
-          <h1 class="text-lg font-bold text-red-700">Dinas Pemadam Kebakaran dan Penyelamatan</h1>
+          <h1 class="text-lg font-bold text-red-700">DISDAMKARMAT</h1>
           <p class="text-xs text-slate-500">Kabupaten Barito Utara</p>
         </div>
       </div>
@@ -216,4 +216,5 @@
   </script>
 </body>
 </html>
+
 
