--- a/index.html
+++ b/index.html
@@ -95,28 +95,28 @@
           <!-- Container scroll -->
           <div id="tipsSlider" class="flex snap-x overflow-x-auto scroll-smooth">
             <div class="slide bg-white rounded-xl shadow p-2 snap-center shrink-0 w-full">
-              <img src="asset/tips1.png" alt="Tips pencegahan singkat" class="rounded-lg w-full h-96 object-contain" />
+              <img src="asset/tips1.png" alt="Tips pencegahan singkat" class="rounded-lg w-full" />
             </div>
             <div class="slide bg-white rounded-xl shadow p-2 snap-center shrink-0 w-full">
-              <img src="asset/tips2.png" alt="Kenapa bisa terjadi?" class="rounded-lg w-full h-96 object-contain" />
+              <img src="asset/tips2.png" alt="Kenapa bisa terjadi?" class="rounded-lg w-full" />
             </div>
             <div class="slide bg-white rounded-xl shadow p-2 snap-center shrink-0 w-full">
-              <img src="asset/tips3.png" alt="Kabel dan stop kontak tidak standar" class="rounded-lg w-full h-96 object-contain" />
+              <img src="asset/tips3.png" alt="Kabel dan stop kontak tidak standar" class="rounded-lg w-full" />
             </div>
             <div class="slide bg-white rounded-xl shadow p-2 snap-center shrink-0 w-full">
-              <img src="asset/tips4.png" alt="Kompor yang ditinggal saat memasak" class="rounded-lg w-full h-96 object-contain" />
+              <img src="asset/tips4.png" alt="Kompor yang ditinggal saat memasak" class="rounded-lg w-full" />
             </div>
             <div class="slide bg-white rounded-xl shadow p-2 snap-center shrink-0 w-full">
-              <img src="asset/tips5.png" alt="Tabung gas bocor" class="rounded-lg w-full h-96 object-contain" />
+              <img src="asset/tips5.png" alt="Tabung gas bocor" class="rounded-lg w-full" />
             </div>
             <div class="slide bg-white rounded-xl shadow p-2 snap-center shrink-0 w-full">
-              <img src="asset/tips6.png" alt="Perlunya APAR" class="rounded-lg w-full h-96 object-contain" />
+              <img src="asset/tips6.png" alt="Perlunya APAR" class="rounded-lg w-full" />
             </div>
             <div class="slide bg-white rounded-xl shadow p-2 snap-center shrink-0 w-full">
-              <img src="asset/tips7.png" alt="Bagaimana kalau sudah terlanjur?" class="rounded-lg w-full h-96 object-contain" />
+              <img src="asset/tips7.png" alt="Bagaimana kalau sudah terlanjur?" class="rounded-lg w-full" />
             </div>
             <div class="slide bg-white rounded-xl shadow p-2 snap-center shrink-0 w-full">
-              <img src="asset/tips8.png" alt="Reminder" class="rounded-lg w-full h-96 object-contain" />
+              <img src="asset/tips8.png" alt="Reminder" class="rounded-lg w-full" />
             </div>
           </div>
 
@@ -239,4 +239,5 @@
   </script>
 </body>
 </html>
+
 
